--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Faire du sens avec un nombre incroyable de données</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Prof. Laurent Gatto" />
+    <meta name="author" content="Prof. Laurent Gatto - Institut de Duve" />
     <script src="slides_files/header-attrs-2.11/header-attrs.js"></script>
     <script src="slides_files/xaringanExtra-webcam-0.0.1/webcam.js"></script>
     <script id="xaringanExtra-webcam-options" type="application/json">{"width":"200","height":"200","margin":"1em"}</script>
@@ -18,7 +18,7 @@
 class: center, middle, inverse, title-slide
 
 # Faire du sens avec un nombre incroyable de données
-### Prof. Laurent Gatto
+### Prof. Laurent Gatto - Institut de Duve
 ### 17 février 2022
 
 ---
