--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Faire du sens avec un nombre incroyable de données</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Prof. Laurent Gatto - Institut de Duve" />
+    <meta name="author" content="Prof. Laurent Gatto - Institut de Duve, UCLouvain" />
     <script src="slides_files/header-attrs-2.11/header-attrs.js"></script>
     <script src="slides_files/xaringanExtra-webcam-0.0.1/webcam.js"></script>
     <script id="xaringanExtra-webcam-options" type="application/json">{"width":"200","height":"200","margin":"1em"}</script>
@@ -18,7 +18,7 @@
 class: center, middle, inverse, title-slide
 
 # Faire du sens avec un nombre incroyable de données
-### Prof. Laurent Gatto - Institut de Duve
+### Prof. Laurent Gatto - Institut de Duve, UCLouvain
 ### 17 février 2022
 
 ---
@@ -65,9 +65,21 @@ class: middle, center, inverse
 ---
 class: middle
 
-&lt;img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Animal_cell_structure_en.svg/1280px-Animal_cell_structure_en.svg.png" width="500"&gt; &lt;img src="https://uclouvain-cbio.github.io/WSBIM1207/figs/Centraldogma_nodetails.png" width="500"&gt;
+.pull-left[
+
+![cell](https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Animal_cell_structure_en.svg/1280px-Animal_cell_structure_en.svg.png)
+
+]
+
+.pull-right[
+
+![dogma](https://uclouvain-cbio.github.io/WSBIM1207/figs/Centraldogma_nodetails.png)
+
+]
+
 
 Credit: Wikipedia
+
 ---
 class: middle
 
@@ -377,6 +389,8 @@ class: center, middle
 class: center, middle, inverse
 
 # Bio-informatique: informatique appliquée à de la biologie/médecine.
+
+I &lt;svg viewBox="0 0 512 512" style="position:relative;display:inline-block;top:.1em;fill:red;height:2em;" xmlns="http://www.w3.org/2000/svg"&gt; &lt;path d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"&gt;&lt;/path&gt; &lt;/svg&gt; bioinformatics
 
 ---
 class: middle, center, inverse
