--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@ class: middle, center, inverse
 ---
 class: middle
 
-- Qu'est-ce que la bio-informatique?
+### Qu'est-ce que la bio-informatique?
+
 - Pourquoi la bio-informatique?
 - Qui fait de la bio-informatique?
 - Où enseigne-t-on la bio-informatique?
 - Quelques exemples d'algorithmes utilisés en bio-informatique.
-- La protéomique spatiale.
+- Illustration: la protéomique spatiale.
 
 ---
 class: middle, center, inverse
@@ -569,6 +570,9 @@ I &lt;svg viewBox="0 0 512 512" style="position:relative;display:inline-block;to
 class: middle, center, inverse
 
 # Questions?
+
+
+Slides: [http://bit.ly/202202uda](http://bit.ly/202202uda)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
