udpate slides and notes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ class: middle
 
 Nous avons les outils technologiques pour mesurer les molécules chaque
 niveau biologique
-- ADN/Génome (3e9 de paires de bases, 20000 gènes) -&gt; **génomique**
+- ADN/Génome (3e9 de paires de bases, 20000 gènes) -&gt;
+  **génomique**/**génétique**
 - ARN/Transciption (50000 transcrits) -&gt; **transcriptomique**
 - Protéines/protéome (1e6 protéoformes) -&gt; **protéomique**
 - Métabolites/métabolome (1e5 métabolites) -&gt; **métabolomique**
@@ -104,11 +105,8 @@ niveau biologique
 
 ]
 
-
 ---
 class: middle
-
-
 
 .pull-left[
 
@@ -129,8 +127,9 @@ niveau biologique
 
 - Ré-assembler les données pour **comprendre** certaines facettes de
   la biologie sous-jacente.
-- L'utilisation d'algorithmes dans les prises de décisions, par
-  exemple dans la caractérisation ou détection de tumeurs.
+- L'utilisation d'**algorithmes** dans les prises de décisions, par
+  exemple dans la caractérisation, le traitement ou détection de
+  tumeurs.
 
 ]
 
@@ -175,10 +174,11 @@ class: middle, center, inverse
 ---
 class: middle
 
-- Faculté de pharmacie et sciences bio-médicales
-- Faculté des sciences
-- Ecole Polytechnique de Louvain
-- Ecole de statistique (statistques et sciences des données)
+- Faculté de pharmacie et sciences bio-médicales (FASB, Woluwé)
+- Ecole Polytechnique de Louvain (EPL, LLN)
+- Ecole de biologie (LLN)
+- Ecole de Statistique, Biostatistique et Sciences Actuarielles (LSBA,
+  LLN)
 
 ---
 class: middle, center, inverse
@@ -293,6 +293,23 @@ class:middle, center
 
 .pull-right[
 
+## 4 échantillons dans 5 dimensions
+
+## Comment explorer/comprendre ces données multidimensionnelles?
+
+]
+
+---
+class:middle, center
+
+.pull-left[
+
+![data2](figs/data2.png)
+
+]
+
+.pull-right[
+
 ![pca 1](figs/pca1.png)
 
 ]
@@ -300,7 +317,7 @@ class:middle, center
 ---
 class:middle, center
 
-## Analyse en composantes principales
+## Analyse en composantes principales (APC)
 
 .pull-left[
 
@@ -332,6 +349,23 @@ class: middle
 .pull-right[
 
 ## Quels sont les échantillons qui se ressemblent le plus?
+
+]
+
+---
+class: middle
+
+.pull-left[
+
+![data2](figs/data2.png)
+
+]
+
+.pull-right[
+
+## Quels sont les échantillons qui se ressemblent le plus?
+
+# A votre avis?
 
 ]
 
@@ -461,7 +495,25 @@ class:middle
 
 .pull-right[
 
-## Est-ce que celui-ci est un *jaune*, un *vert*, un *noir* ou un *blue*?
+## Est-ce que celui-ci est un *jaune*, un *vert*, un *noir* ou un *bleu*?
+
+# A votre avis?
+
+]
+
+---
+class:middle
+
+.pull-left[
+
+&lt;img src="figs/data2.png" width="350"&gt;
+&lt;img src="figs/data_new.png" width="145"&gt;
+
+]
+
+.pull-right[
+
+## Est-ce que celui-ci est un *jaune*, un *vert*, un *noir* ou un *bleu*?
 
 ## Méthode des/du plus proche voisin(s): *k-NN*
 
@@ -567,7 +619,7 @@ class: center, middle, inverse
 I &lt;svg viewBox="0 0 512 512" style="position:relative;display:inline-block;top:.1em;fill:red;height:2em;" xmlns="http://www.w3.org/2000/svg"&gt; &lt;path d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"&gt;&lt;/path&gt; &lt;/svg&gt; bioinformatics
 
 ---
-class: middle, center, inverse
+class: middle, center
 
 # Questions?
 
