--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@ Quand on me demande ce que je fais dans la vie professionnelle et que
 je réponds de la bio-informatique, je précise toujours (et c'est
 devenu un réflexe) que c'est de l'informatique appliquée aux sciences
 bio-médicales. Et je dois vous avouer que ce n'est pas avec grande
-conviction, car je suis bien conscient que cette définition soit des
-plus instructive... mais elle a le mérite d'être courte. Si vraiment
-la personne qui la pose est intéressée, il y a bien évidemment matière
-à élaborer.
+conviction, car je suis bien conscient que cette définition ne soit
+pas des plus instructive... mais elle a le mérite d'être courte. Si
+vraiment la personne qui la pose est intéressée, il y a bien
+évidemment matière à élaborer.
+
 
 Pour vous, par contre, je me suis coupé en quatres car je suis parti
 du principe que si vous êtes là, ce que vous voulez, en effet, savoir
@@ -264,7 +265,7 @@ background-size: contain
 - Prof en bioinfo à l'UCLouvain et directeur du laboratoire de
   Biologie Computationelle et Bio-informatiqe à l'institut de Duve
   depuis sept 2018
-- 2010 - 2018: chercher en bioinformatique à l'Univeristé de
+- 2010 - 2018: chercher en bioinformatique à l'Université de
   Cambridge, UK
 - 2006 - 2009: Bio-informaticien et gestionnaire de projet dans le
   privé.
@@ -373,6 +374,16 @@ background-image: url("figs/lego3.jpg")
 class: middle, center, inverse
 
 # Les données
+
+???
+
+- Les détails de la construction de cette matrice quantitative
+  dépendra de la technolgie omique utilisée.
+
+- Qu'allons-nous pouvoir faire avec ces données? Toujours, bien
+  évidemment, dans le but d'étudier la biologie sous-jacente,
+  d'inférer et de comprendre ce qu'il se passe. **Mieux compredre pour
+  mieux guérir.**
 
 ---
 class:middle, center
