--- a/index.html
+++ b/index.html
@@ -375,16 +375,6 @@ class: middle, center, inverse
 
 # Les données
 
-???
-
-- Les détails de la construction de cette matrice quantitative
-  dépendra de la technolgie omique utilisée.
-
-- Qu'allons-nous pouvoir faire avec ces données? Toujours, bien
-  évidemment, dans le but d'étudier la biologie sous-jacente,
-  d'inférer et de comprendre ce qu'il se passe. **Mieux compredre pour
-  mieux guérir.**
-
 ---
 class:middle, center
 
@@ -415,6 +405,15 @@ class:center, middle
 
 &lt;img src="figs/data2.png" width="500"&gt;
 
+???
+
+- Les détails de la construction de cette matrice quantitative
+  dépendront de la technolgie omique utilisée.
+
+- Qu'allons-nous pouvoir faire avec ces données? Pourquoi les
+  collecter? Toujours, bien évidemment, dans le but d'étudier la
+  biologie sous-jacente, d'inférer et de comprendre ce qu'il se
+  passe. **Mieux comprendre pour mieux guérir.**
 
 ---
 class: middle, center, inverse
